update: average delay of instruction + logement count + number of lines

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -22,7 +22,7 @@
                 <div class="fr-col-12 fr-col-md-6">
                     <div class="fr-my-3w fr-px-2w">
                         <div class="background-white fr-p-2w">
-                            <div class="text-title-blue-france text-center"><span class="fr-h1"> </span> jours</div>
+                            <div class="text-title-blue-france text-center"><span class="fr-h1 text-title-blue-france">{{ delay }} </span> jours</div>
                             <p class="text-center fr-mb-1w">Temps moyen d’instruction d’une convention sur APiLos</p>
                             <p class="fr-text--bold text-center text-success-main ">(vs. 83 jours précédemment)</p>
                         </div>
@@ -31,7 +31,7 @@
                 <div class="fr-col-12 fr-col-md-6">
                     <div class="fr-my-3w fr-px-2w">
                         <div class="background-white fr-p-2w">
-                            <div class="text-title-blue-france text-center"><span class="fr-h1"> </span> logements</div>
+                            <div class="text-title-blue-france text-center"><span class="fr-h1 text-title-blue-france">{{ nb_logements }} </span> logements</div>
                             <p class="text-center">Couverts par le service depuis décembre 2021
                             </p>
                         </div>
