update: add variable text/title depending on the status of the amendment

--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -9,8 +9,8 @@
         {% include "conventions/common/form_header.html" with convention=convention %}
         {% include "common/step_progressbar.html" with convention=convention %}
         <div class="fr-container">
-            <h2>pouet pouet</h2>
-            <div>ici bientôt une superbe prévisualisation de la convention finalisée</div>
+            <h2>Visualiser votre convention</h2>
+            <div class="fr-col-md-12 fr-py-5w">ici bientôt une superbe prévisualisation de la convention finalisée</div>
         </div>
     </div>
 {% endblock %}
