--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -129,11 +129,9 @@
                     </div>
                 </div>
                 <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center fr-mb-5w">
-                    <button class="fr-btn" id="new_convention">
+                    <a class="fr-btn" href="{% url 'conventions:selection' %}">
                         <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Je suis prêt à commencer ma convention
-                    </button>
-                    {% include "common/utils/onclick_redirect.html" with id='new_convention' url_target='conventions:selection' %}
-
+                    </a>
                 </div>
             </div>
         {% elif request|is_instructeur %}
