--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <div class="fr-container">
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-lg-1 fr-col-md-3">
-                        <span class="fr-fi-checkbox-circle-line fr-fi--xxl" aria-hidden="true"></span>
+                        <span class="fr-icon-community-line fr-fi--xxl" aria-hidden="true"></span>
                     </div>
                     <div class="fr-col-lg-7 fr-col-md-9">
                         <h3>Côté bailleur</h3>
@@ -39,20 +39,15 @@
                         </ul>
                     </div>
                     <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
-                        <button class="fr-btn" id='espace_bailleur2'>
+                        <a class="fr-btn" href="{% url 'login' %}">
                             <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
                             </span>Créer une convention
-                        </button>
-                        {% if CERBERE_AUTH %}
-                            {% include "common/utils/onclick_redirect.html" with id='espace_bailleur2' url_target='cas_ng_login' %}
-                        {% else %}
-                            {% include "common/utils/onclick_redirect.html" with id='espace_bailleur2' url_target='login' %}
-                        {% endif %}
+                        </a>
                     </div>
                 </div>
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-lg-1 fr-col-md-3">
-                        <span class="fr-fi-mail-line fr-fi--xxl" aria-hidden="true"></span>
+                        <span class="fr-icon-mail-line fr-fi--xxl" aria-hidden="true"></span>
                     </div>
                     <div class="fr-col-lg-7 fr-col-md-9">
                         <h3>Côté instructeur</h3>
@@ -64,15 +59,10 @@
                         </ul>
                     </div>
                     <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
-                        <button class="fr-btn fr-btn--secondary" id='espace_instructeur2'>
+                        <a class="fr-btn fr-btn--secondary" href="{% url 'login' %}?instructeur=1">
                             <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
                             </span>Instruire une convention
-                        </button>
-                        {% if CERBERE_AUTH %}
-                            {% include "common/utils/onclick_redirect.html" with id='espace_instructeur2' url_target='cas_ng_login' %}
-                        {% else %}
-                            {% include "common/utils/onclick_redirect.html" with id='espace_instructeur2' url_target='login' url_params='?instructeur=1'%}
-                        {% endif %}
+                        </a>
                     </div>
                 </div>
             </div>
