--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,9 +12,9 @@
     {% endif %}
 
     <div class="fr-container-fluid ds_banner">
-        <div class="fr-container">
+        <div class="fr-container fr-pb-2w">
             <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
+                <div class="fr-col-lg-6 fr-col-offset-lg-1">
                     {% if request.GET.instructeur  %}
                         {% include "layout/teasers/instructeur_presentation.html" %}
                     {% else %}
@@ -50,5 +50,4 @@
             </div>
         </div>
     </div>
-    <hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
 {% endblock %}
