--- a/static/css/main.css
+++ b/static/css/main.css
@@ -169,7 +169,13 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .width-100 {
   width: 100%;
 }
-
+.h-80vh {
+  height: 80vh;
+}
+.h-80vh iframe {
+  height: 100%;
+  border: solid 1px #9C9C9C;
+}
 
 .text--center {
   text-align: center;
