--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -8,9 +8,16 @@
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html" with convention=convention %}
         {% include "common/step_progressbar.html" with convention=convention %}
-        <div class="fr-container">
+        <div class="fr-container fr-mb-2w">
             <h2>Visualiser votre convention</h2>
-            <div class="fr-col-md-12 fr-py-5w">ici bientôt une superbe prévisualisation de la convention finalisée</div>
+            {% if convention.statut == '5. Transmise' %}
+                <div class="fr-col-md-12 fr-py-5w">ici bientôt une superbe prévisualisation de la convention finalisée</div>
+            {% else %}
+                <div class="h-80vh">
+                    <iframe src="https://apilos-prod.s3.fr-par.scw.cloud/conventions/b4cfcaa2-8441-477b-9257-afd4ef2051e2/convention_docs/b4cfcaa2-8441-477b-9257-afd4ef2051e2.pdf"  width="100%" height="1000px" nonce="{{request.csp_nonce}}"></iframe>
+                </div>
+            {% endif %}
+
         </div>
     </div>
 {% endblock %}
