able to create conventions from SIAP > Opération

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -463,6 +463,10 @@ table.fullwidth {
   width: 100%;
 }
 
+.table--layout-fixed {
+  width: 100%;
+}
+
 .table--layout-fixed table {
   display: table;
   /* table-layout: fixed; */
