--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -18,7 +18,7 @@
                     <li class="{% if convention_form_step > 11 %}active{% endif %} {% if convention_form_step == 11 %}current_step{% endif %} {% if convention_form_step == 10 %}after_step{% endif %}" role="preview"><div>Prévisualisation</div></li>
                     <li class="{% if convention_form_step > 12 %}active{% endif %} {% if convention_form_step == 12 %}current_step{% endif %} {% if convention_form_step == 11 %}after_step{% endif %}" role="sent">
                         {% if convention.statut == '5. Transmise' %}
-                            <div>Avenants</div>
+                            <div>Actions</div>
                         {% else %}
                             <div>Téléversement</div>
                         {% endif %}
