--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 
 {% block page_title %}
-    {% if convention.statut == '5. Transmise' %}Avenants{% else %}Téléversement{% endif %} - APiLos
+    {% if convention.statut == '5. Transmise' %}Actions{% else %}Téléversement{% endif %} - APiLos
 {% endblock%}
 
 {% load static %}
@@ -21,27 +21,60 @@
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html" with convention=convention %}
         {% include "common/step_progressbar.html" with convention=convention %}
-        <div class="fr-container">
+        <div class="fr-container fr-pb-5w">
             <h2>Votre convention signée</h2>
             {% if convention.statut == '5. Transmise' %}
-                <div class="fr-col-md-12 fr-py-5w">Votre convention signée à déjà été téléversée et a été transmise aux services concernés. Vous pouvez maintenant créer des avenants si besoin.</div>
-                <div class="hidden">
+                <div class="fr-col-md-12 fr-pt-5w">Votre convention signée à déjà été téléversée et a été transmise aux services concernés.</div>
+                <div class="fr-col-md-12 fr-pt-2w">Prochainement, vous pourrez :
+                    <ul>
+                        <li>créer des avenants</li>
+                        <li>éditer une fiche CAF</li>
+                        <li>résilier la convention</li>
+                    </ul>
+                </div>
+                <div class="fr-accordion fr-mt-5w">
+                    <div class="fr-accordion__title">
+                        <div class="fr-accordion__btn clickable " aria-expanded="false" aria-controls="accordion-106"><i>Si nécessaire, vous pouvez téléverser une nouvelle version de la convention signée ici.</i></div>
+                    </div>
+                    <div class="fr-collapse" id="accordion-106">
             {% else %}
-                <div>
+                <div class="fr-col-md-12">Ici, vous pouvez téléverser votre convention signée afin  qu'elle puisse être transmise. </div>
+                <div class="fr-py-3w">
             {% endif %}
 
-            <form method="post" action="{% url 'conventions:sent' convention_uuid=convention.uuid %}" method='post' enctype='multipart/form-data' class="dropzone" id="my-awesome-dropzone">
+            <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class="block--row-strech" id="{{form.signed_files.id_for_label}}_div">
-                    <label class="block--row-strech-1 fr-label fr-mt-1w fr-mb-2w fr-h4" for="{{form_input.id_for_label}}">
-                        {{form.signed_files.label }}
-                    </label>
-                    <div class="fr-mt-1w">
-                        <input type="file" name="file" />
+                <input
+                    class="fileinput--hidden"
+                    type="file"
+                    id="{{upform.file.id_for_label}}"
+                    name="{{upform.file.html_name}}"
+                    accept="application/pdf">
+                <div class="block--row-strech">
+                    <div>
+                        <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
+                            Téléverser la convention signée
+                        </button>
+                        {% for error in upform.file.errors %}
+                            <p id="text-input-error-desc-error" class="fr-error-text">
+                                {{ error }}
+                            </p>
+                        {% endfor %}
                     </div>
-                    <button class="fr-btn">enregistrer</button>
                 </div>
+
+                <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                    document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
+                        document.getElementById('{{upform.file.id_for_label}}').click();
+                    };
+                    document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
+                        this.form.submit()
+                    }
+                </script>
             </form>
         </div>
+        {% if convention.statut == '5. Transmise' %}
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
