--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,8 +19,8 @@
   display: block;
 }
 
-.fr-fi--xxl:after, .fr-fi--xxl:before {
-  font-size: 4rem!important;
+.fr-fi--xxl {
+  --icon-size: 4rem;
 }
 
 .fr-fi--sm:after, .fr-fi--sm:before {
@@ -463,6 +463,10 @@ table.fullwidth {
   width: 100%;
 }
 
+.table--layout-fixed {
+  width: 100%;
+}
+
 .table--layout-fixed table {
   display: table;
   /* table-layout: fixed; */
@@ -605,6 +609,27 @@ table.fullwidth {
  * End display convention status
  */
 
+/*
+ * Adapt button color when it is a link 'a'
+ */
+
+.fr-btn:hover {
+  color:white;
+  text-decoration: none;
+}
+
+.fr-btn--secondary:hover {
+  color:#000091!important;
+  text-decoration: none;
+}
+
+.fr-header__tools-links .fr-btn:hover {
+  color:#000091!important;
+}
+
+/*
+ * End Adapt button color when it is a link 'a'
+ */
 
 .apilos-input-group--inline {
   display: flex;
@@ -616,7 +641,6 @@ table.fullwidth {
 .apilos-form-label--strike {
   text-decoration: line-through;
 }
-
 
 .apilos-sticky-top {
   position: -webkit-sticky; /* Safari */
