--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -10,23 +10,12 @@
         {% include "common/step_progressbar.html" with convention=convention %}
         <div class="fr-container fr-mb-2w">
             <h2>Visualiser votre convention</h2>
-            {% if convention.statut == '5. Transmise' %}
-                toto
-                <div class="fr-col-md-12 fr-py-5w h-80vh">
-                    <iframe src="/conventions/{{ convention.uuid}}/{{convention.fichier_signe}}" width="100%" height="1000px" nonce="{{request.csp_nonce}}"></iframe>
-                </div>
-            {% else %}
-                pouet
-                <div class="fr-col-md-12 fr-py-5w h-80vh">
-                    <iframe src="{{ STORAGE_LOCATION }}/conventions/{{ convention.uuid }}/convention_docs/{{ convention.uuid}}.pdf"  width="100%" height="1000px" nonce="{{request.csp_nonce}}"></iframe>
-                </div>
-            {% endif %}
+            <div class="fr-col-md-12 fr-py-5w h-80vh">
+
+                <iframe src="{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{% url 'conventions:display_pdf' convention_uuid=convention.uuid %}" width="100%" height="1000px" nonce="{{request.csp_nonce}}"></iframe>
+            </div>
 
         </div>
-        /conventions/{{ convention.uuid }}/convention_docs/{{ convention.uuid}}.pdf<br/>
-        {{convention.fichier_signe}}
-        {{ STORAGE_LOCATION }}
 
     </div>
 {% endblock %}
-
