--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -24,7 +24,7 @@
         <div class="fr-container fr-pb-5w">
             <h2>Votre convention signée</h2>
             {% if convention.statut == '5. Transmise' %}
-                <div class="fr-col-md-12 fr-pt-5w">Votre convention signée à déjà été téléversée et a été transmise aux services concernés.</div>
+                <div class="fr-col-md-12 fr-pt-5w">Votre convention signée à déjà été téléversée.</div>
                 <div class="fr-col-md-12 fr-pt-2w">Prochainement, vous pourrez :
                     <ul>
                         <li>créer des avenants</li>
